READY FOR REVIEW (Fundamentals - good)

--- a/fundamentals/fundamentals_(good).ipynb
+++ b/fundamentals/fundamentals_(good).ipynb
@@ -568,12 +568,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38c48780-1da6-413c-9af2-ca845052bef3",
+   "metadata": {},
+   "source": [
+    "##### Example 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f8e9306d-c3d4-4672-b338-0ed45e475c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kamen rider blade\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"blade\"\n",
+    "print(f\"kamen rider {name}\") #f turns things to variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9113f03a-d00e-4ded-b6ed-ab590ce55526",
+   "metadata": {},
+   "source": [
+    "##### Example 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c6d8f947-86b9-46c8-88e8-8092e076b769",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kamen rider KUUGA\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"kuuga\"\n",
+    "print(f\"kamen rider {name.upper()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3d8cef6-636b-49f4-b018-ff0ab4df603d",
+   "metadata": {},
+   "source": [
+    "##### Example 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2dfc2943-8833-436e-830b-8df79c5f8fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of your love for cheese is 10, but the value of my love for cheese is 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print(f\"The value of your love for cheese is {x}, but the value of my love for cheese is {x**5}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12275e55-f07c-40f7-bd15-e4705d43952c",
+   "metadata": {},
+   "source": [
+    "##### Example 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5191bc8d-8f67-4902-8341-b994d5fa32de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kurogane supanaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Formating texts\n",
+    "saying = \"kurogane supanaaaaa\"\n",
+    "print(f\"{saying}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "04fea3a0-d1f1-4af6-9cd6-51764d3431a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                       kurogane supanaaaaa                                                       \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{saying:^129}\")  #add (no.) of character spaces in front"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4a9e02a0-a0f1-4f71-bf27-7425733ab571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--kurogane supanaaaaa---\n",
+      "kurogane supanaaaaa👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺👺\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{saying:-^24}\") #fills up empty space with dashes\n",
+    "print(f\"{saying:👺<83}\")\n",
+    "#^: middle alignment, < : right alignment,> : left alignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54d1de7-a2d2-4020-9502-3e7b63f92251",
+   "metadata": {},
+   "source": [
+    "##### Example 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3fc32f13-f0a0-40e8-b1fd-0ead453f842f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the circumference of my stomach is 314159.2654\n",
+      "we driving at speed of light ie. 2.99792458e+08m/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Formating numbers\n",
+    "import numpy as np\n",
+    "\n",
+    "print(f\"the circumference of my stomach is {np.pi*100000:.4f}\") #to 4d.p.\n",
+    "print(f\"we driving at speed of light ie. {299792458:.8e}m/s\") #scientific notation"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "a50396f4",
    "metadata": {},
    "source": [
     "## 5.1 Structure of f-strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f6b36fd-8dab-4d1d-94c5-e0960b5cd6da",
+   "metadata": {},
+   "source": [
+    "`Refer to this for `\n",
+    "[Commands for f-strings](https://sps.nus.edu.sg/sp2273/docs/python_basics/02_basics/2_basics_good.html)"
    ]
   },
   {
@@ -586,12 +774,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "c2fda1da-4e48-4839-b201-0919ce5641bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I know\n",
+      "\tbut I still let go\n",
+      "\t\t\tof that hand\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Break a line\n",
+    "print('I know\\n\\tbut I still let go\\n\\t\\t\\tof that hand')\n",
+    "#\"\\n\" breaks a line, \"\\t\": tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "90bce6a7-f80d-4f5b-a9b7-529bf1b7948d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "might as well just use \"\", makes life easier, doesn't it?\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To avoid errors \n",
+    "print('might as well just use \"\", makes life easier, doesn\\'t it?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b13b1a54-3fce-42fe-82ed-280ff0808e01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "why\\would\\you\\need\\backslashes?\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To put backslashes\n",
+    "print(\"why\\\\would\\\\you\\\\need\\\\backslashes?\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "c63b6ff5",
    "metadata": {},
    "source": [
     "# 7 Computers read = from Right to Left!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "bbdc52ad-b869-41a1-a4c0-0c342ad8adb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 24\n",
+    "y = x - 5\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3db724d6-f9c1-45c9-8e69-6bdc547c2e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 24\n",
+    "x = x/2\n",
+    "x"
    ]
   },
   {
@@ -604,12 +898,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "6496eb33-f6a8-4602-aa82-1ab78c01fb95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#shorthand\n",
+    "x = 24\n",
+    "x /= 2\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d96baab-c895-4871-bfdc-53a4c340cef9",
+   "metadata": {},
+   "source": [
+    "Refer to [shorthand notation](https://sps.nus.edu.sg/sp2273/docs/python_basics/02_basics/2_basics_good.html) for more shorthands"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "dc3f81aa",
    "metadata": {},
    "source": [
     "# 9 Python can be a prima-donna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "cdde22f9-fdb6-4c1b-bcca-e3a6fe0454cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2097445145.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[75], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    #Error is at the last line\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "#Error is at the last line"
    ]
   },
   {
@@ -622,6 +968,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c863dbc-d06a-43b8-9ec8-00fef55de7de",
+   "metadata": {},
+   "source": [
+    "##### to note:\n",
+    "- Write programs for people, not computers.\n",
+    "- Optimise software only after it works correctly.\n",
+    "- Document design and purpose, not mechanics.\n",
+    "- Collaborate."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "9b1f1337",
@@ -629,6 +987,48 @@
    "source": [
     "# 11 Looking for help"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a06835e2-2ac7-4793-a238-efad626c981d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python 3.11's help utility! If this is your first time using\n",
+      "Python, you should definitely check out the tutorial at\n",
+      "https://docs.python.org/3.11/tutorial/.\n",
+      "\n",
+      "Enter the name of any module, keyword, or topic to get help on writing\n",
+      "Python programs and using Python modules.  To get a list of available\n",
+      "modules, keywords, symbols, or topics, enter \"modules\", \"keywords\",\n",
+      "\"symbols\", or \"topics\".\n",
+      "\n",
+      "Each module also comes with a one-line summary of what it does; to list\n",
+      "the modules whose name or summary contain a given string such as \"spam\",\n",
+      "enter \"modules spam\".\n",
+      "\n",
+      "To quit this help utility and return to the interpreter,\n",
+      "enter \"q\" or \"quit\".\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### please help\n",
+    "help()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3996fff5-4bc0-4e8d-aca5-7f4af8fed350",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
