--- a/fundamentals  exercises/fundamentals_(good)_exercises.ipynb
+++ b/fundamentals  exercises/fundamentals_(good)_exercises.ipynb
@@ -8,6 +8,109 @@
    "source": [
     "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Good) Exercises</span></div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c67e0eb-19a6-4703-b199-7332104ec64e",
+   "metadata": {},
+   "source": [
+    "##### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5aa0260a-9429-47a8-95ba-c761eb0b5291",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Give me a number? 22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('Give me a number?')\n",
+    "print('You entered', user_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f38b3aa2-c159-4c71-a68b-09a4f3f4050a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score: 70-100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's letter grade 70-100\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('Enter the student\\'s score:')\n",
+    "print('The student\\'s letter grade', user_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "30318709-cc13-435d-b382-48cf5399c153",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score: 88\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's letter grade: Fail\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = input('Enter the student\\'s score:')\n",
+    "\n",
+    "if score == range(70, 101):\n",
+    "    print('The student\\'s letter grade:', 'A')\n",
+    "elif score == range(50, 70):\n",
+    "    print('The student\\'s letter grade:', 'B')\n",
+    "elif score == range(35, 50):\n",
+    "    print('The student\\'s letter grade:', 'C')\n",
+    "else:\n",
+    "    print('The student\\'s letter grade:', 'Fail')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a4811a-96f8-4bdb-be6a-4a3effec38dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
