READY FOR REVIEW [Corrections] (Fundamentals - need)
Thank you for the comments. I have made some changes, I do hope they match what you are looking for. Thank you.

--- a/fundamentals/fundamentals_(need).ipynb
+++ b/fundamentals/fundamentals_(need).ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "35dd651a-3fa4-42f0-ba4b-656c58078b7c",
    "metadata": {},
    "outputs": [
@@ -77,13 +77,15 @@
      "output_type": "stream",
      "text": [
       "Hello World\n",
-      "Hello World again\n"
+      "Hello World again\n",
+      "僕が愛したすべての君へ\n"
      ]
     }
    ],
    "source": [
     "print('Hello World')\n",
-    "print('Hello World again')\n"
+    "print('Hello World again')\n",
+    "print('僕が愛したすべての君へ')"
    ]
   },
   {
@@ -96,9 +98,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cd8efd84-efa0-4fef-8655-0574ae49d3a8",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dcd4a7e7-b1be-44e0-a25a-f8c89b1d3b37",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Print' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello World\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mPrint\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello World\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Print' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World')\n",
     "Print('Hello World')"
@@ -125,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "d229a285-f16d-4458-b7d6-784e4c5dd93a",
    "metadata": {},
    "outputs": [
@@ -140,34 +163,33 @@
    ],
    "source": [
     "# This is a comment\n",
-    "print('One')              # This is a comment.\n",
-    "# print('Two')            # The interpreter ignores this line.\n",
-    "print('Three')            # This is\n",
-    "                          # also a way to\n",
-    "                          # write comments"
+    "print('One')              \n",
+    "# print('Two')            # this line is ignored\n",
+    "print('Three')           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "7fa5d7e1-8b71-419a-a12f-1440b88dc53b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nMultiliners?\\nYea sign me \\nUP\\n'"
+       "'\\nMultiliners?\\nYea sign me\\nUP\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Something addtional, please ignore\n",
     "\"\"\"\n",
     "Multiliners?\n",
-    "Yea sign me \n",
+    "Yea sign me\n",
     "UP\n",
     "\"\"\""
    ]
@@ -216,7 +238,7 @@
     }
    ],
    "source": [
-    "name = 'Batman'   # Make name carry 'Batman'\n",
+    "name = 'Batman'   # Assign 'Batman' to name\n",
     "print(name)\n",
     "\n",
     "name == 'Superman'  # Tell me if name is equal to 'Batman'?\n",
@@ -246,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9fc281f0-1e51-4e13-a033-047d25be4718",
    "metadata": {},
    "outputs": [
@@ -254,17 +276,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Batman!\n"
+      "Goodbye\n"
      ]
     }
    ],
    "source": [
-    "name = 'Batman'\n",
+    "time = 'dawn'\n",
     "\n",
-    "if name == 'Batman':\n",
-    "    print('Hello Batman!') #When it is true, indentation is needed, ':' to indicate when sth starts\n",
+    "if time == 'morning':\n",
+    "    print('Good morning') #When it is true, indentation is needed, ':' to indicate when sth starts\n",
     "else:\n",
-    "    print('Hello World!') #When it is false"
+    "    print('Goodbye') #When it is false"
    ]
   },
   {
@@ -288,25 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "4e90e9f3-eeba-4adf-a6e2-b3ae4dd1dec9",
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (3840535622.py, line 5)",
+     "evalue": "unexpected indent (3425192678.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(social_media)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "x = 10\n",
-    "print(x)\n",
+    "social_media = twitter\n",
+    "print(social_media)\n",
     "\n",
-    "x = 10\n",
-    " print(x)"
+    "social_media = twitter\n",
+    " print(social_media)"
    ]
   },
   {
@@ -321,9 +343,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "46cac937",
+   "id": "667c864e-3886-4a79-ac56-26ae010d1ba6",
    "metadata": {},
    "source": [
     "# 8 ‘age’ is English, age is a variable."
@@ -331,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "160dd5d9-e091-4b62-aba6-f1d9490f7c6d",
    "metadata": {},
    "outputs": [
@@ -341,16 +362,16 @@
      "text": [
       "24\n",
       "age\n",
-      "You're twenty years old.\n"
+      "You're twenty-four years old.\n"
      ]
     }
    ],
    "source": [
     "age = 24\n",
-    "print(age)       # Print the value of the variable age\n",
-    "print(\"age\")     # Print the English word 'age'\n",
+    "print(age)       # age as a variable\n",
+    "print(\"age\")     # English\n",
     "\n",
-    "print(\"You're twenty years old.\")"
+    "print(\"You're twenty-four years old.\")"
    ]
   },
   {
@@ -364,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "85ea71fe-9bcf-4a9d-b47d-5b6614e4fce1",
    "metadata": {},
    "outputs": [
@@ -372,38 +393,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "we need you brackets\n"
      ]
     }
    ],
    "source": [
-    "print('Hello!')             # In functions"
+    "print('we need you brackets')             # In functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "11454318-f617-43fe-9d0f-f93e87a79802",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "40800"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(1 + 2) * 5                 # For math"
+    "(34 + 1241) * 32               # For math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "8719f863-747f-41ec-bf9d-31bdf756f130",
    "metadata": {},
    "outputs": [
@@ -411,28 +432,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[[1, 'A'], [2, 'B'], [3, 'C'], [4, 'D'], [5, 'E']]\n"
+      "['mad', 'crazy', 'insane', 'unhinged', 'lunatic']\n",
+      "[['red', 'Jesse'], ['pink', 'Kyomo'], ['black', 'Hokuto'], ['yellow', 'Kochi'], ['blue', 'Juri'], ['green', 'Shintarou']]\n"
      ]
     }
    ],
    "source": [
-    "py_list = [1, 2, 3, 4, 5]   # A 1D list\n",
+    "synonyms = ['mad', 'crazy', 'insane', 'unhinged', 'lunatic']   # A 1D list\n",
     "\n",
-    "py_list_2 = [               # A 2D list\n",
-    "                [1, \"A\"],      \n",
-    "                [2, \"B\"],\n",
-    "                [3, \"C\"],\n",
-    "                [4, \"D\"],\n",
-    "                [5, \"E\"]\n",
-    "]\n",
-    "print(py_list)\n",
-    "print(py_list_2)\n"
+    "member_list = [ [\"red\", \"Jesse\"],  [\"pink\", \"Kyomo\"], [\"black\", \"Hokuto\"], [\"yellow\", \"Kochi\"], [\"blue\", \"Juri\"]\n",
+    ", [\"green\", \"Shintarou\"]]\n",
+    "print(synonyms)\n",
+    "print(member_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "b88b2923-e552-4dcd-b6b3-78f8c895e4cd",
    "metadata": {},
    "outputs": [
@@ -440,21 +456,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bruce Wayne\n",
-      "DC\n"
+      "Kamen Rider Blade\n",
+      "Blay Rouzer\n"
      ]
     }
    ],
    "source": [
-    "personal_info = {\n",
-    "    'Names': 'Batman',\n",
-    "    'Real Name': 'Bruce Wayne',\n",
-    "    'Age': 55,\n",
-    "    'Affiliation': 'Justice League',\n",
-    "    'Universe': 'DC'\n",
+    "profile = {\n",
+    "    'Names': 'Kamen Rider Blade', 'Real Name': 'Kenzaki Kazuma',  'Age': 42, 'Type': 'Hero', 'Motif': 'Hercules Beetle', 'Weapon': 'Blay Rouzer'\n",
     "}\n",
-    "print(personal_info['Real Name']) \n",
-    "print(personal_info['Universe'])"
+    "print(profile['Names']) \n",
+    "print(profile['Weapon'])"
    ]
   },
   {
@@ -508,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f2d429d4-b6b6-44ea-908c-5841633465d4",
    "metadata": {},
    "outputs": [],
@@ -518,23 +530,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "4ac5a9dc-3fcd-461c-88ad-151445fcbaf5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "3.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "math.sqrt(4)"
+    "math.sqrt(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42b07c60-cada-4fbe-b128-9e8903da6633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.factorial(0)"
    ]
   },
   {
@@ -548,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "0905d2cd-3308-416c-b874-266ec1f19687",
    "metadata": {},
    "outputs": [],
@@ -588,23 +621,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "f492d5b1-dc1a-4bcf-aded-4a8d23f0933f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2., 3., 4.])"
+       "array([0.        , 0.47942554, 0.3271947 ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sqrt([4, 9, 16])"
+    "np.sin([0, 1/2, 1/3])"
    ]
   },
   {
@@ -630,17 +663,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "4a6fc503-6bb5-413b-b75d-7a0a41fec152",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['I', 'am', 'Batman']"
+       "['俺には夢がない', 'でもなー、夢を守ることはできる', '変身！']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,9 +681,31 @@
    "source": [
     "#dot is used to indicate ownership. i belong to you hehe (...)\n",
     "\n",
-    "\"I am Batman\".split()\n",
+    "\"俺には夢がない。でもなー、夢を守ることはできる。変身！\".split('。')\n",
     "\n",
     "#1234.split() #doesn't work for number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f0defa5-824c-4807-a162-afe22c8423c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Did Hannah ', 'ee bee', '? Hannah did.']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Did Hannah see bees? Hannah did.\".split()\n",
+    "'Did Hannah see bees? Hannah did.'.split('s')"
    ]
   },
   {
