READY FOR REVIEW [Corrections] (Fundamentals - good)

--- a/fundamentals/fundamentals_(good).ipynb
+++ b/fundamentals/fundamentals_(good).ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "50c0e7ec-6438-4365-a7d2-324af305fe42",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "0f854691-d399-4679-ab6f-802e521880c8",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "ecfa505c-656a-4bd6-aa6c-fb45e642e074",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "70cbb26f-fb0d-4f0f-9c74-7103fe2ada2a",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "fe24e31a-e1a5-49b7-b021-1ea28214fe3f",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "d57fc76e-be08-404b-9f2b-61a08f06bb1a",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "4536a4cd-fa1b-4be8-a6f3-f5abba0fd93f",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "5c3907e6-51db-4f03-a87d-c59a4ff5ea2c",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "0a4dfc9c-1d1c-4d09-bc5e-a0a97722f8ec",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "f7a5456e-e73f-474c-9d68-8803ef25106a",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "fcae9fdb-fd79-4ba4-a0b2-be07a7893b0a",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "e545350b-434e-4b3a-8e79-8abe31563b6a",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "b0112bee-4c9c-4aac-be7b-77256d5beeee",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "b56f04a2-b248-403a-bbaa-f9bbcbcb0a2e",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "f904e1dc-c9f0-4fab-ac6a-99846ddc4e9b",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "id": "66edbacc-ef71-4b90-878e-2e8d57a8bb4a",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "4c2c1235-3b23-4dcf-b98b-64be06ac365f",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "False"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "id": "55ebd8ce-7606-421a-a0cb-7ae98244d373",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "5.551115123125783e-17"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "id": "0eaecbfb-7846-4255-b5ef-1655bdeb1ac1",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "'0.29999999999999999'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "id": "f69979d4-25b1-41df-b1a2-1e18b7604e59",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "id": "067a3328-2d7d-4f10-90d7-70b52f8ad0fe",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "id": "8d91cc9e-73a9-476a-9c2f-5703ff35c9ed",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "id": "eb724e31-9edc-4011-954f-4fe20ffb686c",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "id": "f8e9306d-c3d4-4672-b338-0ed45e475c6d",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "id": "c6d8f947-86b9-46c8-88e8-8092e076b769",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "2dfc2943-8833-436e-830b-8df79c5f8fb0",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "id": "5191bc8d-8f67-4902-8341-b994d5fa32de",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "id": "04fea3a0-d1f1-4af6-9cd6-51764d3431a1",
    "metadata": {},
    "outputs": [
@@ -686,17 +686,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                       kurogane supanaaaaa                                                       \n"
+      "                                                                                                              kurogane supanaaaaa\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{saying:^129}\")  #add (no.) of character spaces in front"
+    "print(f'{saying:>129}')  #add (no.) of character spaces in front"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "4a9e02a0-a0f1-4f71-bf27-7425733ab571",
    "metadata": {},
    "outputs": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "id": "3fc32f13-f0a0-40e8-b1fd-0ead453f842f",
    "metadata": {},
    "outputs": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "id": "c2fda1da-4e48-4839-b201-0919ce5641bf",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "id": "90bce6a7-f80d-4f5b-a9b7-529bf1b7948d",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "id": "b13b1a54-3fce-42fe-82ed-280ff0808e01",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "id": "bbdc52ad-b869-41a1-a4c0-0c342ad8adb1",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
        "19"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "id": "3db724d6-f9c1-45c9-8e69-6bdc547c2e69",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "12.0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "id": "6496eb33-f6a8-4602-aa82-1ab78c01fb95",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "12.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "id": "cdde22f9-fdb6-4c1b-bcca-e3a6fe0454cb",
    "metadata": {},
    "outputs": [
@@ -949,7 +949,7 @@
      "evalue": "incomplete input (2097445145.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[75], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    #Error is at the last line\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[82], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    #Error is at the last line\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -992,31 +992,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a06835e2-2ac7-4793-a238-efad626c981d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to Python 3.11's help utility! If this is your first time using\n",
-      "Python, you should definitely check out the tutorial at\n",
-      "https://docs.python.org/3.11/tutorial/.\n",
-      "\n",
-      "Enter the name of any module, keyword, or topic to get help on writing\n",
-      "Python programs and using Python modules.  To get a list of available\n",
-      "modules, keywords, symbols, or topics, enter \"modules\", \"keywords\",\n",
-      "\"symbols\", or \"topics\".\n",
-      "\n",
-      "Each module also comes with a one-line summary of what it does; to list\n",
-      "the modules whose name or summary contain a given string such as \"spam\",\n",
-      "enter \"modules spam\".\n",
-      "\n",
-      "To quit this help utility and return to the interpreter,\n",
-      "enter \"q\" or \"quit\".\n",
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "##### please help\n",
     "help()"
